Gnome-shell v40+: Fix misaligned 'Do no disturb' button

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -20,7 +20,6 @@ stage {
 .button, %button {
   @include button(normal);
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   &:focus { @include button(focus); }
   &:insensitive { @include button(insensitive); }
@@ -1118,12 +1117,6 @@ StScrollBar {
           color: darken($fg_color,4%);
         }
       }
-
-        .message-list-clear-button.button {
-          @include button(normal);
-          &:hover,&:focus { @include button(hover); }
-          margin: 1.5em 1.5em 0;
-        }
 
         .message-list-sections {
           spacing: 1em;
