--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -17,7 +17,6 @@ stage {
   icon-shadow: 0 1px black;
   border: 1px solid #07080c;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
     color: #00A9A5;
@@ -581,7 +580,7 @@ StScrollBar {
     color: #6F7678;
     border: 1px solid #07080c;
     -barlevel-height: 0.4em;
-    -barlevel-background-color: #283339;
+    -barlevel-background-color: #1a1c2c;
     -barlevel-active-background-color: #00A9A5;
     -barlevel-overdrive-color: #FF5370;
     -barlevel-overdrive-separator-width: 0.2em; }
@@ -992,22 +991,6 @@ StScrollBar {
   width: 31.5em; }
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #656c6d; }
-
-.message-list-clear-button.button {
-  color: #6F7678;
-  background-color: #040406;
-  box-shadow: none;
-  border: 1px solid #07080c;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #07080c;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #00A9A5;
-    background-color: #07080c;
-    border: 1px solid #07080c;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
 
 .message-list-sections {
   spacing: 1em; }
